--- a/index.html
+++ b/index.html
@@ -10,11 +10,71 @@
     <div id="container">
         <div id="left">
             <!-- hier komt de klok -->
+            <img id="clockimage" src="/web-weekopdracht-1-ns-treinbord-SHDA-GitHub-main/assets/img/clock.jpg">
         </div>
         <div id="middle">
+                    <div id="screen">
+            <!-- hier komt het beeld met al het informatie erop -->
+            <img id="image" src="/web-weekopdracht-1-ns-treinbord-SHDA-GitHub-main/assets/img/ns_logo.png">
+            <div id="intercity">
+                <!-- hier komt de text voor op het scherm over de trein -->
+            Intercity
+            </div>
+            <div id="one">
+                <!-- hier komt de text voor op het scherm over de tijd -->
+            1
+            </div>
+            <div id="minute">
+                <!-- hier komt de text voor op het scherm over de tijd -->
+            minuut
+            </div>
+            <div id="place">
+                <!-- hier komt de text voor op het scherm over de tijd -->
+            Heerlen
+            </div>
+            <div id="places">
+                <!-- hier komt de text voor op het scherm over de tijd -->
+            via 's-Hertogenbosch, Eindhoven,
+            Weert, Roermond en Sittard
+            </div>
+            <img id="imageunder" src="/web-weekopdracht-1-ns-treinbord-SHDA-GitHub-main/assets/img/treinding.jpg">
+        </div>
+        <div id="bottom">
+            <!-- hier komt het kleine ruimte onder het scherm -->
+            <div id="next">
+                <!-- hier komt de text voor op het scherm over de tijd -->
+            Hierna /
+            </div>
+            <div id="next-english">
+                <!-- hier komt de text voor op het scherm over de tijd -->
+            next
+            </div>
+            <div id="continuation">
+                <!-- hier komt de text voor op het scherm over de tijd -->
+            : 08:54 IC Venlo
+            </div>
+        </div>
             <!-- Hier komt de reizigers info -->
         </div>
         <div id="right">
+            <div id="numbersquare">
+                <!-- hier komt het kleine blokje aan de rechterkant van het scherm -->
+                <div id="numbersquaresmall">
+                    <!-- hier komt het kleinere blokje op het kleine blojke aan de rechterkant van het scherm voor detail -->
+                </div>
+                <div id="text1">
+                    <!-- hier komt de text voor op het blokje op het scherm -->
+                18
+                </div>
+                <div id="B">
+                    <!-- hier komt de text voor op het blokje op het scherm -->
+                b
+                </div>
+                <div id="tracks">
+                    <!-- hier komt de text voor op het blokje op het scherm -->
+                spoor
+                </div>
+            </div>
             <!-- hier komt het spoor nummer -->
         </div>
     </div>
